added text of part 2

--- a/src/test.html
+++ b/src/test.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>
+        Заголовок текста
+    </h1>
+    <p>
+        только благодаря чему мы несмотря ни на что
+    </p>
+    <h2>
+        Часть 1
+    </h2>
+    <p>
+        Текст первой части Текст первой части Текст первой части Текст первой части Текст первой части Текст первой
+    </p>
 </body>
 </html>
